# hrevn-surface-anthropic

./: README.md  pyproject.toml
.claude/skills/hrevn-baseline-check/: SKILL.md
.claude/skills/hrevn-sign-on-complete/: SKILL.md
.claude/skills/hrevn-verify-bundle/: SKILL.md  schema.json
docs/: ALPHA_EXECUTION_TRACE.md  ANTHROPIC_ALPHA_TESTING.md  MANAGED_API_USAGE.md  MCP_USAGE.md
docs/integration/: MANAGED_API_USAGE.md
examples/: baseline_check_request.json
scripts/: hrevn_anthropic_runner.py
