[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hrevn-anthropic-runner"
version = "0.1.0a0"
description = "HREVN CLI runner for Claude Code and Anthropic-facing workflows."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Miguel Herrero", email = "contact@hrevn.com" }
]
keywords = ["hrevn", "anthropic", "claude-code", "workflow-integrity", "auditability"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
Homepage = "https://hrevn.com"
Repository = "https://github.com/miguel-herrero-systems/hrevn-surface-anthropic"

[project.scripts]
hrevn-anthropic = "hrevn_anthropic_runner.cli:main"
hrevn-claude-code = "hrevn_anthropic_runner.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
